2004-06-03  William Jon McCann  <mccann@jhu.edu>

	* e-error.c (e_error_newv): Add HIG border width for dialog window.

2004-06-01  Christian Neumair  <chris@gnome-de.org>

	* Makefile.am (test_error_LDADD): Link test-error against libeutil.

2004-06-01  Anders Carlsson  <andersca@gnome.org>

	* e-expander.c (e_expander_expose): Don't propagate the expose
	to the label widget, the parent expose handler does that.

2004-05-28  Anders Carlsson  <andersca@gnome.org>

	* e-error.c (e_error_newv): Use the constructed title string.

2004-05-27  Rodney Dawes  <dobey@novell.com>

	* Makefile.am (EXTRA_DIST): Add $(error_i18n)

2004-05-21  Not Zed  <NotZed@Ximian.com>

	* e-error.c (e_error_default_parent): set a default error parent
	fallback.
	(e_error_newv): if parent is null, see if we have a default still
	alive, and use that.  warn if not.
	(e_error_default_parent): uh, fix the sense of the
	if-we-dont-have-it test.

2004-05-20  JP Rosevear  <jpr@novell.com>

	* e-task-widget.c (e_task_widget_construct): only unref the mask
	if there is one

2004-05-19  JP Rosevear  <jpr@novell.com>

	* Makefile.am: don't dist the error .h file

2004-05-18  Not Zed  <NotZed@Ximian.com>

	* e-error.c (ee_load): load the <help> tag if present.
	(ee_response): handle the help response and swallow the signal.
	(e_error_newv): setup help button if we have a help uri.

2004-05-17  Jeffrey Stedfast  <fejj@novell.com>

	* e-url-entry.c (init): Use E_ICON_SIZE_BUTTON for the icon size
	in the e_icon_factory_get_icon() call.

	* e-combo-button.c (create_empty_image_widget): Don't hard-code
	the size of the icon in pixels, instead use the appropriate
	E_ICON_SIZE_ enum.

2004-05-17  JP Rosevear  <jpr@novell.com>

	Fixes #58460
	
	* e-task-widget.c (e_task_widget_construct): bitmap_unref the
	mask, don't object_unref it

2004-05-12  Not Zed  <NotZed@Ximian.com>

	* e-error.c (ee_load): duh, use the right node pointer for title
	and secondary text.
