@@ -72,6 +72,8 @@ void      e_source_selector_show_selection   (ESourceSelector *selector,
 					      gboolean         show);
 gboolean  e_source_selector_selection_shown  (ESourceSelector *selector);
 
+void     e_source_selector_set_toggle_selection(ESourceSelector *selector, gboolean state);
+
 ESource *e_source_selector_peek_primary_selection  (ESourceSelector *selector);
 void     e_source_selector_set_primary_selection   (ESourceSelector *selector,
 						    ESource         *source);
